--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1> Benjamin Lattanzio</h1>
+<h1> Hello my name is Benjamin Lattanzio.</h1>
 <h1> My hobbies involve playing sports and video games!</h1>
